// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not affect existing S2 icons 1`] = `
"import Add from '@react-spectrum/s2/icons/Add';

<Add />;"
`;

exports[`Leave comment if no matching S2 icon found 1`] = `
"import AssetCheck from '@spectrum-icons/workflow/AssetCheck';

// TODO(S2-upgrade): A Spectrum 2 equivalent to 'AssetCheck' was not found. Please update this icon manually.
<AssetCheck />;"
`;

exports[`Migrate S1 icon with different name to S2 1`] = `
"import AlertTriangle from "@react-spectrum/s2/icons/AlertTriangle";

<AlertTriangle />;"
`;

exports[`Migrate S1 icon with different name to S2. Keep name if already taken in scope. 1`] = `
"import Alert from "@react-spectrum/s2/icons/AlertTriangle";
import AlertTriangle from 'elsewhere';

<div>
  <Alert />
  <AlertTriangle />
</div>"
`;

exports[`Migrate S1 icon with same name to S2 1`] = `
"import Add from "@react-spectrum/s2/icons/Add";

<Add />;"
`;

exports[`Migrate custom-named S1 icon to S2. Keep name as custom name. 1`] = `
"import AlertIcon from "@react-spectrum/s2/icons/AlertTriangle";
import Alert from 'elsewhere';

<div>
  <AlertIcon />
  <Alert />
</div>"
`;

exports[`Remove Icon and tells people to use compiler? import as svg? 1`] = `
"import {Icon} from '@adobe/react-spectrum';

function CustomIcon(props) {
  return (
    <Icon {...props}>
      <svg viewBox="0 0 36 36">
        <path d="M18.477.593,22.8,12.029l12.212.578a.51.51,0,0,1,.3.908l-9.54,7.646,3.224,11.793a.51.51,0,0,1-.772.561L18,26.805,7.78,33.515a.51.51,0,0,1-.772-.561l3.224-11.793L.692,13.515a.51.51,0,0,1,.3-.908L13.2,12.029,17.523.593A.51.51,0,0,1,18.477.593Z" />
      </svg>
    </Icon>
  );
}"
`;
